<resources>
    <string name="app_name">YummyRecipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="lastname">LastName</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="email_is_not_valid">Email must contains "@" and "." </string>
    <string name="check_internet">Please Check Internet Connection</string>
    <string name="version">Version</string>
    <string name="recipe">Recipe</string>
    <string name="search">Search</string>
    <string name="collection">Collection</string>
    <string name="Planner">Planner</string>
    <string name="goodMorning">Good Morning</string>
    <string name="goodAfternoon">Good Afternoon</string>
    <string name="goodEvening">Good Evening</string>
    <string name="goodNight">Good Night</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="breakfast_time">Breakfast Time</string>
    <string name="lunch_time">Lunch Time</string>
    <string name="snack_time">Snack Time</string>
    <string name="dinner_time">Dinner Time</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="hi">Hi</string>
    <string name="good_morning">Good Morning</string>
    <string name="economical_recipes">Economical Recipes</string>
    <string name="healthy">HEALTHY</string>
    <string name="vegan_foods">VEGAN FOODS</string>
    <string name="premium">PREMIUM</string>
    <string name="quick_recipes">Quick Recipes</string>
    <string name="weight_loss_foods">WEIGHT LOSS FOODS</string>
    <string name="suggested">Suggested</string>
    <string name="meals_on_a_budget">Meals On A Budget</string>
    <string name="quick_and_easy">Quick Easy</string>
    <string name="kid_friendly_foods">Kid Friendly Foods</string>
    <string name="few_ingredients_foods">Few Ingredients Foods</string>
    <string name="vegan">Vegan</string>
    <string name="view_all">View All</string>
    <string name="ingredients">Ingredients:</string>
    <string name="equipments">Equipments:</string>
    <string name="cooking_instructions">Cooking Instructions:</string>
    <string name="diets">Diets:</string>
    <string name="nutrient_per_serving">Nutrient Per Serving:</string>
    <string name="similar">You Might Also Like:</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="favorites">Favorite</string>
    <string name="add_new_recipe_to_favorites">Add new recipe to favorite</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="searchbyingredients">SearchByIngredients</string>
    <string name="search_common_ingredients">Search Common Ingredients</string>
    <string name="hungry">Hungry?</string>
    <string name="suggested_for_you">Suggested For You</string>
    <string name="search_with_0_ingredients">SEARCH WITH 0 INGREDIENTS</string>
    <string name="selected_ingredients">Selected Ingredients</string>
    <string name="filters">Filters</string>
    <string name="diets_filter">Diets</string>
    <string name="ingredients_filter">Ingredients</string>
    <string name="search_by_meal">Search by Meal</string>
    <string name="most_popular_categories">Most Popular Categories</string>
    <string name="show_results">SHOW RESULTS</string>
    <string name="lifestyles">Lifestyles</string>
    <string name="high_fiber">High-Fiber</string>
    <string name="Ketogenic">Ketogenic</string>
    <string name="low_calorie">Low Calorie</string>
    <string name="high_protein">High-Protein</string>
    <string name="low_carb">Low-Carb</string>
    <string name="low_fat">Low-Fat</string>
    <string name="low_sugar">Low-Sugar</string>
    <string name="vegetarian">VEGETARIAN</string>
    <string name="gluten_free">GLUTEN FREE</string>
    <string name="pescetarian">PESCETARIAN</string>
    <string name="paleo">PALEO</string>
    <string name="allergies">ALLERGIES</string>
    <string name="dairy">DAIRY</string>
    <string name="egg">EGG</string>
    <string name="grain">Grain</string>
    <string name="peanut">PEANUT</string>
    <string name="seafood">SEAFOOD</string>
    <string name="soy">SOY</string>
    <string name="breakfast">Breakfast</string>
    <string name="main_course">Main Course</string>
    <string name="snack">Snack</string>
    <string name="dessert">Dessert</string>
    <string name="meal_type">Meal Type</string>
    <string name="airFryer">airFryer</string>
    <string name="asian">Asian</string>
    <string name="mexican">Mexican</string>
    <string name="vegetarian_cat">Vegeterian</string>
    <string name="baked_goods">Baked Goods</string>
    <string name="time">Time</string>
    <string name="under_15_min">Under 15 Min</string>
    <string name="under_30_min">Under 30 Min</string>
    <string name="budget_per_serving">Budget per Serving</string>
    <string name="under_1_usd">Under $1 USD</string>
    <string name="under_2_usd">Under $2 USD</string>
    <string name="under_3_usd">Under $3 USD</string>
    <string name="under_4_usd">Under $4 USD</string>
    <string name="calorie_per_serving">Calorie Per Serving</string>
    <string name="under_200_cal">Under 200 Cal</string>
    <string name="_200_400_cal">200-400 Cal</string>
    <string name="_400_600_cal">400-600 Cal</string>
    <string name="_600_800_cal">600-800 Cal</string>
    <string name="region">Region</string>
    <string name="asian_filter">Asian</string>
    <string name="chinese">Chinese</string>
    <string name="french">French</string>
    <string name="indian">Indian</string>
    <string name="italian">Italian</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="tools_and_appliances">Tools And Appliances</string>
    <string name="oven">Oven</string>
    <string name="blender">Blender</string>
    <string name="food_processor">Food Processor</string>
    <string name="oven_baked">Oven-Baked</string>
    <string name="no_results">No Results</string>
    <string name="choose_the_day_to_plan_your_meal">Choose the day to plan your meal!</string>

</resources>