<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.DietsFragment">

    <!--Close-->
    <ImageView
        android:id="@+id/closeImg"
        style="@style/AdvancedSearchButtons"
        android:rotation="45"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--DietStyles-->
    <TextView
        android:id="@+id/dietsTxt"
        style="@style/Search_Titles"
        android:layout_marginTop="@dimen/_20mdp"
        android:text="@string/diets"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Ketogenic Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ketogenicButton"
        style="@style/FilterButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:insetTop="@dimen/_7mdp"
        android:insetBottom="@dimen/_7mdp"
        android:layout_marginTop="@dimen/_8mdp"
        android:text="@string/Ketogenic"
        android:textSize="@dimen/_7font_mdp"
        app:cornerRadius="@dimen/_25mdp"
        app:layout_constraintEnd_toStartOf="@+id/veganButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dietsTxt" />
    <!--Vegan Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/veganButton"
        style="@style/FilterButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:insetTop="@dimen/_7mdp"
        android:insetBottom="@dimen/_7mdp"
        android:text="@string/vegan"
        android:textSize="@dimen/_7font_mdp"
        app:cornerRadius="@dimen/_25mdp"
        app:layout_constraintEnd_toStartOf="@+id/vegetarianButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ketogenicButton"
        app:layout_constraintTop_toTopOf="@id/ketogenicButton" />
    <!--Vegetarian Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/vegetarianButton"
        style="@style/FilterButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8mdp"
        android:insetTop="@dimen/_7mdp"
        android:insetBottom="@dimen/_7mdp"
        android:text="@string/vegetarian"
        android:textSize="@dimen/_7font_mdp"
        app:cornerRadius="@dimen/_25mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/veganButton"
        app:layout_constraintTop_toTopOf="@id/ketogenicButton" />

    <!--SearchWithIngredientsButton-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/showResultsButton"
        style="@style/SearchWithButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40mdp"
        android:layout_marginHorizontal="@dimen/_20mdp"
        android:layout_marginTop="@dimen/_40mdp"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/show_results"
        android:textSize="@dimen/_10font_mdp"
        app:cornerRadius="@dimen/_25mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ketogenicButton" />
</androidx.constraintlayout.widget.ConstraintLayout>