<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">
    <!--Scroll-->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20mdp"
            android:orientation="vertical">
            <!--Cover-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coverImg"
                android:adjustViewBounds="true"
                android:src="@drawable/food"
                android:padding="@dimen/_20mdp"
                android:layout_marginTop="@dimen/_20mdp"/>

            <!--FirstName-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50mdp"
                android:id="@+id/firstNameEdt"
                android:hint="@string/first_name"
                android:padding="@dimen/_8mdp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="@dimen/_12mdp"
                android:ems="10"
                style="@style/EditTextStyle"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/_32mdp"
                android:layout_marginStart="@dimen/_32mdp"
                android:layout_marginEnd="@dimen/_32mdp"/>
            <!--LastName-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50mdp"
                android:id="@+id/lastNameEdt"
                android:hint="@string/lastname"
                android:padding="@dimen/_8mdp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="@dimen/_12mdp"
                android:ems="10"
                style="@style/EditTextStyle"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/_32mdp"
                android:layout_marginStart="@dimen/_32mdp"
                android:layout_marginEnd="@dimen/_32mdp"/>
            <!--UserName-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50mdp"
                android:id="@+id/userNameEdt"
                android:hint="@string/username"
                android:padding="@dimen/_8mdp"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="@dimen/_12mdp"
                android:ems="10"
                style="@style/EditTextStyle"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/_32mdp"
                android:layout_marginStart="@dimen/_32mdp"
                android:layout_marginEnd="@dimen/_32mdp"/>
            <!--Email-->
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50mdp"
                android:id="@+id/e_mailEdt"
                android:hint="@string/email"
                android:padding="@dimen/_8mdp"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="@dimen/_12mdp"
                android:ems="10"
                style="@style/EditTextStyle"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/_32mdp"
                android:layout_marginStart="@dimen/_32mdp"
                android:layout_marginEnd="@dimen/_32mdp"/>


        </LinearLayout>


    </ScrollView>

    <!--Register Button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45mdp"
        android:layout_margin="@dimen/_20mdp"
        android:text="@string/register"
        android:textSize="@dimen/_15font_mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

   

</androidx.constraintlayout.widget.ConstraintLayout>